--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "main": "index.js",
+  "scripts": {
+    "clean": "rimraf dist src/_js",
+    "build": "npm-run-all clean build:ts build:11ty",
+    "dev": "NODE_ENV=dev npm-run-all clean build:ts -p watch:* -- --watch",
+    "build:11ty": "eleventy --quiet",
+    "watch:11ty": "eleventy --serve --quiet",
+    "build:ts": "tsc --outDir src/_js",
+    "watch:ts": "npm run build:ts --watch",
+    "test": "jest"
+  },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1"
+    "@11ty/eleventy": "^2.0.1",
+    "jest": "^26.1.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.3"
   }
 }
