--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": "./resources/javascript/"
-  }
+  },
+  "exclude": ["node_modules", "resources/javascript/compiled/", "_site"]
 }
